# app_heureka

./: .gitignore  README.md  pyproject.toml
myenv/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-4.5-1_gnu.json  bzip2-1.0.8-h7b6447c_0.json  ca-certificates-2021.10.26-h06a4308_2.json  certifi-2020.6.20-pyhd3eb1b0_3.json  history  ld_impl_linux-64-2.35.1-h7274673_9.json  libffi-3.3-he6710b0_2.json  libgcc-ng-9.3.0-h5101ec6_17.json  libgomp-9.3.0-h5101ec6_17.json  libstdcxx-ng-9.3.0-hd4cf53a_17.json  libuuid-1.0.3-h7f8727e_2.json  ncurses-6.3-h7f8727e_2.json  openssl-1.1.1m-h7f8727e_0.json  pip-21.2.4-py310h06a4308_0.json  python-3.10.0-h12debd9_4.json  readline-8.1.2-h7f8727e_1.json  setuptools-58.0.4-py310h06a4308_0.json  sqlite-3.37.2-hc218d9a_0.json  tk-8.6.11-h1ccaba5_0.json  tzdata-2021e-hda174b7_0.json  wheel-0.37.1-pyhd3eb1b0_0.json  xz-5.2.5-h7b6447c_0.json  zlib-1.2.11-h7f8727e_4.json
myenv/lib/: libcrypto.so.1.1  libtinfow.so.6.3  tclConfig.sh  tkConfig.sh
myenv/lib/itcl4.2.1/: itclConfig.sh
myenv/lib/pkgconfig/: formw.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.10-embed.pc  python-3.10.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  uuid.pc  zlib.pc
myenv/lib/python3.10/: _sysconfigdata__linux_x86_64-linux-gnu.py  _sysconfigdata__linux_x86_64-linux-gnu.py.orig  _sysconfigdata_x86_64_conda_cos6_linux_gnu.py  _sysconfigdata_x86_64_conda_linux_gnu.py
myenv/lib/tdbc1.1.2/: tdbcConfig.sh
src/app_heureka/: detector.py  main.py  python_app.py
tests/: test_detector.py
(+155 files in other folders)
