[tool.poetry]
name = "app_heureka"
version = "0.1.0"
description = "Heureka challenge"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
gunicorn = "^20.1.0"
gcld3 = "^3.0.13"
pytest = "^7.0.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.app_heureka.detector:start"
